@@ -1,7 +1,9 @@
 0.3.x -> 0.4.0
 - add support for unknown encoding files (ie. DOS file)
-- add potential support for converting Lotus, ... document
-- add potential support for asking the document's password
+- add potential support for converting Lotus, ... documents, ie. must now accept
+  to convert all Lotus Wk1 files and Symphony files
+- add potential support for asking the document's password ( but do nothing )
+- correct some compiler warnings when compiling in debug mode
 
 libwps-0.3.1
 
